--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-  <li><a href="{{ site.baseurl }}/index.html">Home</a></li>{%
+  <li><a href="{{ site.baseurl }}/index.html">主页</a></li>{%
   if page.layout == 'page' %}
   <li>{{ page.title }}</li>{%
   elsif page.layout == 'post' %}{%
