--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -122,7 +122,7 @@
               </header>
               <ul class="actions vertical">
                 <!-- <li><a href="#" class="button fit special">Activate</a></li> -->
-                <li><a href="{{ '/contact/' | prepend: site.baseurl }}" class="button fit special">Contact</a></li>
+                <li><a href="{{ '/About me/' | prepend: site.baseurl }}" class="button fit special">About me</a></li>
               </ul>
             </div>
           </section>
